# conan-IrrAssimp

./: CMakeLists.txt  conanfile.py
profiles/: Linux.x86_64.debug  Linux.x86_64.release
